<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="item"
            type="com.example.testandroidbinar.model.Item" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="@dimen/cardview_default_elevation">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvNamaBarang"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_dark"
                android:text="@{item.nama}"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView_tanggal"
                style="@style/TextAppearance.AppCompat.Menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/tanggal_dipasok"
                app:layout_constraintEnd_toStartOf="@+id/tvTanggal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNamaBarang" />

            <TextView
                style="@style/TextAppearance.AppCompat.Menu"
                android:id="@+id/tvTanggal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@{item.tanggal}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNamaBarang"
                tools:text="25/10/2017" />


            <TextView
                style="@style/TextAppearance.AppCompat.Menu"
                android:id="@+id/textView_jumlah"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/jumlah_barang"
                app:layout_constraintEnd_toStartOf="@+id/tvJumlahBarang"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTanggal" />


            <TextView
                style="@style/TextAppearance.AppCompat.Menu"
                android:id="@+id/tvJumlahBarang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@{item.jumlah}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTanggal"
                tools:text="100" />


            <TextView
                style="@style/TextAppearance.AppCompat.Menu"
                android:id="@+id/textView_pemasok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pemasok"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/tvPemasokBarang"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvJumlahBarang" />


            <TextView
                style="@style/TextAppearance.AppCompat.Menu"
                android:id="@+id/tvPemasokBarang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{item.pemasok}"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvJumlahBarang"
                tools:text="CV Maju Mundur" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>